Fix too large board images

--- a/theme/custom.css
+++ b/theme/custom.css
@@ -126,8 +126,8 @@ body {
 	text-align: center;
 }
 
-.bbcode-board > img {
-	max-width: 360px;
+.bbcode-board > img, .bbcode-board > img.postimage {
+	max-width: 480px;
 	max-height: 360px;
 	border: 4px ridge white;
 }
